--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,13 @@ code {
     monospace;
 }
 
+h1 {
+  text-align: center;
+}
+
 .container {
+  margin: 0 auto;
+  width: 50%;
   border: 1px solid rgb(210, 210, 210);
   border-radius: 4px;
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
@@ -33,29 +39,42 @@ code {
   margin-bottom: 24px;
 }
 
-label {
+.form-field {
   display: flex;
-  justify-content: space-between;
+  flex-flow: column wrap;
+  align-content: flex-start;
 }
-input,
-select,
-button {
-  height: 1.5rem;
-  width: 150px;
-  margin: 8px 8px 8px 0;
-}
-button {
-  color: crimson;
-  background-color: white;
-  border: 1px solid crimson;
 
-  &:disabled {
-    cursor: not-allowed;
-    color: darkgray;
-    border-color: darkgray;
-  }
+label {
+  font-weight: 700;
+  margin-bottom: 2%;
 }
-.submit {
-  display: flex;
-  justify-content: flex-end;
+
+input,
+select {
+  width: 100%;
+  height: 3em;
+  border: 0.1em solid #ddd;
+  border-radius: 4px;
+  outline-color: #3498db;
+  text-indent: 0.5em;
+  margin-bottom: 2%;
+}
+
+button {
+  color: #3498db;
+  background-color: transparent;
+  width: 100%;
+  height: 2.5em;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border: 1px solid #3498db;
+  border-radius: 4px;
+  transition: all 146ms ease-in-out;
+}
+
+button:hover {
+  background-color: #3498db;
+  color: #fff;
+  box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.3);
 }
