--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ h1 {
 
 .container {
   margin: 0 auto;
-  width: 50%;
+  width: 40%;
   border: 1px solid rgb(210, 210, 210);
   border-radius: 4px;
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
@@ -77,4 +77,9 @@ button:hover {
   background-color: #3498db;
   color: #fff;
   box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.3);
+}
+
+.error {
+  color: red;
+  font-size: 1rem;
 }
