--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html {
   font-size: 100%;
   box-sizing: border-box;
+  background: rgb(51, 152, 219);
 }
 
 *,
@@ -26,6 +27,16 @@ code {
 
 h1 {
   text-align: center;
+  color: white;
+}
+
+.team-title {
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+h3 {
+  color: #3498db;
 }
 
 .container {
@@ -33,7 +44,7 @@ h1 {
   width: 40%;
   border: 1px solid rgb(210, 210, 210);
   border-radius: 4px;
-  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  box-shadow: 0 30px 60px -30px rgba(0, 0, 0, 0.5);
   padding: 32px;
   background-color: white;
   margin-bottom: 24px;
